# hgameliftserver

./: .gitignore  README.md  cert.pem  common.hxml  connect.py  delete_all_builds.py  get_node.py  haxelib.json  install.sh  key.pem  test.hxml  test_gamelift.hxml  test_json.hxml  test_websockets.hxml  test_websockets_server.hxml  update_fleet_capacity.py
ext/GameLift-Cpp-ServerSDK/5-3/: CMakeLists.txt  NOTICE_C++_AMAZON_GAMELIFT_SDK.TXT  README.md
ext/GameLift-Cpp-ServerSDK/5-3/cmake/: External_clang-format.cmake  External_rapidjson.cmake  External_serversdk-tests.cmake  External_serversdk.cmake  External_websocketpp.cmake
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk/: CMakeLists.txt  aws-cpp-sdk-gamelift-serverConfig.cmake
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/: CMakeLists.txt
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/include/aws/gamelift/internal/network/: MockGameLiftMessageHandler.h  MockWebSocketClientWrapper.h
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/include/aws/gamelift/internal/retry/: MockRetryStrategy.h
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/include/aws/gamelift/utility/: TestHelper.h
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/source/aws/gamelift/common/: GameLiftErrorsTest.cpp  OutcomeTest.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/source/aws/gamelift/internal/: GameLiftCommonStateTest.cpp  GameLiftServerStateInitTest.cpp  GameLiftServerStateTest.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/source/aws/gamelift/internal/model/: MessageTest.cpp  ResponseMessageTest.cpp  UriTest.cpp  WebSocketAttributeValueTest.cpp  WebSocketGameSessionTest.cpp  WebSocketPlayerSessionTest.cpp  WebSocketPlayerTest.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/source/aws/gamelift/internal/model/adapter/: DescribePlayerSessionsAdapterTest.cpp  GetFleetRoleCredentialsAdapterTest.cpp  StartMatchBackfillAdapterTest.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/source/aws/gamelift/internal/model/message/: CreateGameSessionMessageTest.cpp  RefreshConnectionMessageTest.cpp  TerminateProcessMessageTest.cpp  UpdateGameSessionMessageTest.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/source/aws/gamelift/internal/model/request/: AcceptPlayerSessionRequestTest.cpp  ActivateGameSessionRequestTest.cpp  ActivateServerProcessRequestTest.cpp  HeartbeatServerProcessRequestTest.cpp  RemovePlayerSessionRequestTest.cpp  TerminateServerProcessRequestTest.cpp  UpdatePlayerSessionCreationPolicyRequestTest.cpp  WebSocketDescribePlayerSessionsRequestTest.cpp  WebSocketGetComputeCertificateRequestTest.cpp  WebSocketGetFleetRoleCredentialsRequestTest.cpp  WebSocketStartMatchBackfillRequestTest.cpp  WebSocketStopMatchBackfillRequestTest.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/source/aws/gamelift/internal/model/response/: WebSocketDescribePlayerSessionsResponseTest.cpp  WebSocketGetComputeCertificateResponseTest.cpp  WebSocketGetFleetRoleCredentialsResponseTest.cpp  WebSocketStartMatchBackfillResponseTest.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/source/aws/gamelift/internal/network/: GameLiftWebSocketClientManagerTest.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/source/aws/gamelift/internal/network/callback/: CreateGameSessionCallbackTest.cpp  DescribePlayerSessionsCallbackTest.cpp  GetComputeCertificateCallbackTest.cpp  GetFleetRoleCredentialsCallbackTest.cpp  RefreshConnectionCallbackTest.cpp  StartMatchBackfillCallbackTest.cpp  TerminateProcessCallbackTest.cpp  UpdateGameSessionCallbackTest.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/source/aws/gamelift/internal/retry/: GeometricBackoffRetryStrategyTest.cpp  JitteredGeometricBackoffRetryStrategyTest.cpp  RetryingCallableTest.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/source/aws/gamelift/server/: GameLiftServerAPITest.cpp  LogParametersTest.cpp  ProcessParametersTest.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk-tests/source/aws/gamelift/server/model/: AttributeValueTest.cpp  DescribePlayerSessionsRequestTest.cpp  DescribePlayerSessionsResultTest.cpp  GamePropertyTest.cpp  GameSessionStatusTest.cpp  GameSessionTest.cpp  GetComputeCertificateResultTest.cpp  GetFleetRoleCredentialsRequestTest.cpp  GetFleetRoleCredentialsResultTest.cpp  PlayerSessionCreationPolicyTest.cpp  PlayerSessionStatusTest.cpp  PlayerSessionTest.cpp  PlayerTest.cpp  ServerParametersTest.cpp  StartMatchBackfillRequestTest.cpp  StartMatchBackfillResultTest.cpp  StopMatchBackfillRequestTest.cpp  UpdateGameSessionTest.cpp  UpdateReasonTest.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk/include/aws/gamelift/internal/network/: WebSocketppClientWrapper.h
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk/source/aws/gamelift/common/: GameLiftCommonState.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk/source/aws/gamelift/internal/: GameLiftServerState.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk/source/aws/gamelift/internal/model/: Message.cpp  WebSocketAttributeValue.cpp  WebSocketGameSession.cpp  WebSocketPlayer.cpp  WebSocketPlayerSession.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk/source/aws/gamelift/internal/network/: GameLiftWebSocketClientManager.cpp  WebSocketppClientWrapper.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk/source/aws/gamelift/internal/retry/: GeometricBackoffRetryStrategy.cpp  JitteredGeometricBackoffRetryStrategy.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk/source/aws/gamelift/internal/util/: JsonHelper.cpp
ext/GameLift-Cpp-ServerSDK/5-3/gamelift-server-sdk/source/aws/gamelift/server/: GameLiftServerAPI.cpp
ext/GameLift-Cpp-ServerSDK/5-3/release-notes/: 3.4.2-release-notes.txt  5.0.0-release-notes.txt  5.0.2-release-notes.txt  5.0.3-release-notes.txt  5.0.4-release-notes.txt  5.1.0-release-notes.txt  5.1.1-release-notes.txt
test/: JsonTest.hx  Test.hx  TestGamelift.hx  TestServer.js  TestWebSocketServer.hx  (+1 more)
(+153 files in other folders)
